--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>Front-end News</title>
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="main.css"
 	</head>
 	<body>
 		<header>
