--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<title>Front-end News</title>
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="main.css"
+		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<header>
-			<p>Front-end News!</p>
+		<header class='hero'>
+			<p class='logo'>Front-end News!</p>
 		</header>
 		<main>
 			<ol>
