style news meta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 		<title>Front-end News</title>
 		<link rel='stylesheet' href='normalize.css'>
 		<link rel='stylesheet' href='main.css'>
@@ -22,10 +24,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Dan Denney</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>2 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -37,10 +39,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Jon Friskics</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>5 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -52,10 +54,10 @@
 								<em>Posted by:</em>
 								<a href='#'>John D. Jameson</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>0 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -67,10 +69,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Drew Barontini</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>1 comment</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -82,10 +84,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Jordan Wade</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>6 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -97,10 +99,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Jean Kaluza</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>2 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -112,10 +114,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Jon Friskics</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>4 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -127,10 +129,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Sarah Imbert</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>7 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -142,10 +144,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Dan Denney</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>1 comment</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
@@ -157,10 +159,10 @@
 								<em>Posted by:</em>
 								<a href='#'>Justin Mezzell</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>10 comments</a>
 							</li>
-							<li>
+							<li class='news-meta-item'>
 								<a href='#'>Like this story!</a>
 							</li>
 						</ul>
