--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<a href='#'>2 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -43,7 +43,7 @@
 								<a href='#'>5 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -58,7 +58,7 @@
 								<a href='#'>0 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -73,7 +73,7 @@
 								<a href='#'>1 comment</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -88,7 +88,7 @@
 								<a href='#'>6 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -103,7 +103,7 @@
 								<a href='#'>2 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -118,7 +118,7 @@
 								<a href='#'>4 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -133,7 +133,7 @@
 								<a href='#'>7 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -148,7 +148,7 @@
 								<a href='#'>1 comment</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
@@ -163,13 +163,14 @@
 								<a href='#'>10 comments</a>
 							</li>
 							<li class='news-meta-item'>
-								<a href='#'>Like this story!</a>
+								<a class='js-like' href='#'>Like this story!</a>
 							</li>
 						</ul>
 					</li>
 				</ol>
 			</div>
 		</main>
-	
+	<script src='https://code.jquery.com/jquery-3.0.0.min.js'></script>
+	<script src='app.js'></script>
 	</body>
 </html>
