--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</form>
 				</header>
 
-				<div class='modal'>
+				<div class='modal js-modal'>
 					<div class='modal-media'>
 						<img src='https://s.gravatar.com/avatar/2f9c4025a3e6d10bf091b6279fb28130?s=500&r=g' alt='' />
 						<h3 class='modal-media-title'>Dan Denney</h3>
@@ -45,7 +45,8 @@
 			            </ol>
 			          </div>
 			        </div>
-			        <div class='modal-overlay'></div>
+			        <div class='modal-overlay js-modal-overlay js-show-modal-overlay'>
+			        </div>
 
 
 
@@ -55,7 +56,7 @@
 						<ul class='news-meta'>
 							<li class='news-meta-item'>
 								<em>Posted by:</em>
-								<a href='#'>Dan Denney</a>
+								<a class='js-show-modal' href='#'>Dan Denney</a>
 							</li>
 							<li class='news-meta-item'>
 								<a href='#'>2 comments</a>
